--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1968,6 +1968,26 @@
                 order: 3;
                 top: -6px;
             }
+
+            &-list {
+                display: flex;
+                flex-direction: column;
+                // margin-top: 25px;
+                left: 54px;
+                bottom: 41px;
+                position: absolute;
+                z-index: 20;
+                opacity: 0;
+
+                a {
+                    font-size: 16px;
+                    line-height: 252%;
+                    /* or 40px */
+                    letter-spacing: 0.035em;
+                    color: #FFFFFF;
+                    text-transform: none;
+                }
+            }
         }
     }
 
@@ -2755,7 +2775,7 @@
             }
 
             &-button {
-               border-bottom-color: transparent;
+                border-bottom-color: transparent;
             }
         }
 
@@ -3152,6 +3172,20 @@
                     width: 31.55px;
                     height: 11.44px;
                 }
+            }
+        }
+
+        &__hover {
+            &-title {
+                font-size: 18px !important;
+            }
+
+            &-description {
+                font-size: 14px !important;
+            }
+
+            &-group {
+                margin-bottom: 46px !important;
             }
         }
     }
