--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -16,6 +16,22 @@ section.models
   .container.models__container2
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -28,6 +44,22 @@ section.models
     
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -40,6 +72,22 @@ section.models
 
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -52,6 +100,22 @@ section.models
 
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
@@ -64,6 +128,22 @@ section.models
 
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
@@ -76,6 +156,22 @@ section.models
 
     .card
       .card__img
+        .card__hover
+          .card__hover-block
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
