--- a/src/scss/components/_models.scss
+++ b/src/scss/components/_models.scss
@@ -82,6 +82,7 @@
 
     &__img {
         height: 323px;
+        position: relative;
 
         img {
             max-width: 100%;
@@ -118,6 +119,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 1000;
 
         &--sale {
             background-color: #FF9900;
@@ -155,5 +157,92 @@
             }
         }
 
+    }
+
+    &__hover {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(250, 250, 250, 0.5);
+            z-index: -1;
+        }
+
+        &-block {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: flex-start;
+            height: 100%;
+
+        }
+
+        &-group {
+            margin-bottom: 25px !important;
+            margin-left: 36px;
+
+
+        }
+
+        &-title {
+            font-size: 14px;
+            line-height: 120.3%;
+            /* identical to box height, or 22px */
+
+            letter-spacing: 0.105em;
+            text-transform: uppercase;
+            margin-bottom: 5px;
+            color: #323232;
+        }
+
+        &-description {
+            font-size: 12px;
+            line-height: 140%;
+            /* or 20px */
+            flex-shrink: 0;
+            letter-spacing: 0.035em;
+            max-width: 174px;
+            color: #585858;
+        }
+
+        &-calculator {
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            width: 39px;
+            height: 39px;
+            z-index: 1500;
+            background: url('../img/models/calculator.svg') no-repeat center / cover;
+
+            &::after {
+                content: 'Калькулятор модели';
+                position: absolute;
+                right: -150px;
+                top: -50px;
+                z-index: 1000;
+                font-size: 12px;
+                line-height: 140%;
+                /* identical to box height, or 17px */
+                letter-spacing: 0.035em;
+                color: #323232;
+                padding: 7px 18px;
+                background-color: #fff;
+                width: 163px;
+                opacity: 0;
+                transition: opacity 0.2s ease-in-out;
+            }
+        }
     }
 }
