--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -7,7 +7,7 @@
     height: 100%;
     background-color: rgba(#000000, 0.5);
     z-index: 10000;
-    display: none;
+    // display: none;
 
 
     .policy a {
