--- a/src/views/catalog.pug
+++ b/src/views/catalog.pug
@@ -1,19 +1,46 @@
 block config
-  - var pagetitle = 'Каталог'
 
-block styles
-  link(rel='stylesheet', href='assets/css/common.css?v=' + PACKAGE.version)
-
-block header
-  include _includes/blocks/header
-
-block footer
-  include _includes/blocks/footer
+doctype html
+html(lang="ru", class="no-js")
+    head
+        block head
+            include _includes/head
+    body.body
+        include _includes/mixins/svgsprite
         
-// include popups here
-block modal
-  include _includes/blocks/modal
+        block header
+            include _includes/blocks/header
 
-script(src='assets/js/vendors~main.bundle.js')
-script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
+        .content#catalog
+          block content
+            block filter
+                include _includes/blocks/filter
+            
+            block models 
+                include _includes/blocks/models
+               
+        
+        block footer
+            include _includes/blocks/footer
+        
+        // include popups here
+        block modal
+            include _includes/blocks/modal
 
+        block styles
+          link(rel='stylesheet', href='assets/css/catalog.css?v=' + PACKAGE.version)
+        block scripts-config
+            script.
+                /* изменяемые настройки скриптов, указаны значения по умолчанию */
+                var appConfig = {
+                    /*
+                    scrollToOffset: 150, // оффсет при скролле до элемента
+                    scrollToSpeed: 500, // скорость скролла 
+                    */
+                }
+        block scripts
+            script(src='assets/js/vendors~main.bundle.js')
+            script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+            <script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript"></script>
