mobile version menu ready

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -19,6 +19,11 @@
 @import "components/header";
 @import "components/catalog/filter";
 @import "components/models";
+@import "components/leader";
+@import "components/stages";
+@import "components/feedback";
+@import "components/benefits";
+@import "components/catalog/catalog-leader";
 @import "components/social";
 @import "components/footer";
 
