--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,6 +2,10 @@ img {
     max-width: 100%;
 }
 
+button {
+    user-select: none;
+}
+
 .body {
     background: $color-bg;
     color: $color-text;
