--- a/src/scss/components/_hovers.scss
+++ b/src/scss/components/_hovers.scss
@@ -127,6 +127,12 @@
     }
 
 
+    .type__item {
+        &:hover {
+            color: #323232;
+        }
+    }
+
 }
 
 @media(min-width:1920px) {
