--- a/src/views/product.pug
+++ b/src/views/product.pug
@@ -11,7 +11,7 @@ html(lang="ru", class="no-js")
         block header
             include _includes/blocks/header
 
-        .content#catalog
+        .content#product
           block content
             block filter
                 include _includes/blocks/filter
@@ -48,7 +48,6 @@ html(lang="ru", class="no-js")
 
         block styles
           link(rel='stylesheet', href='assets/css/catalog.css?v=' + PACKAGE.version)
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/>
         block scripts-config
             script.
                 /* изменяемые настройки скриптов, указаны значения по умолчанию */
